# wiki-economics

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  package.json
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/cloud-vps/: bootstrap.sh  deploy-release.sh  env.example  lib.sh  render-env.sh  rollback.sh  run-refresh.sh
docs/: admin-server.md  architecture.md  benchmarking.md  cloud-vps-deploy.md  dependencies-and-licenses.md  development.md  meta-wiki-page.wikitext  release.md  security.md  stack-and-data-sources.md  troubleshooting.md
output/: defaults_business.json.sh  defaults_gdp.json.sh  defaults_inequality.json.sh  defaults_labor.json.sh  defaults_patrol.json.sh  manifest.json.sh
scripts/: build-site.sh  check_lcov.py  check_vendor_polars.sh  ci-local.sh  compute_patrol.py  dev.sh  fetch_patrol.py  refresh.sh  setup.sh  test_check_lcov.py  test_fetch_patrol.py
scripts/lib/: wiki_econ.sh
site/: admin-auth.cjs  admin-auth.test.cjs  admin-server.cjs  admin-server.test.cjs  observablehq.config.js  package-lock.json  package.json
site/data-build/: defaults_business.json.sh  defaults_edit_variation.json.sh  defaults_gdp.json.sh  defaults_inequality.json.sh  defaults_labor.json.sh  (+2 more)
src/: bench.rs  end_to_end_tests.rs  fetch.rs  ingest.rs  main.rs  merge.rs  patrol.rs  schema.rs  storage.rs  test_support.rs
tests/: cli.rs
(+20 files in other folders)
