[package]
name = "wiki-econ"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
clap = { version = "4", features = ["derive"] }
polars = { version = "0.53", default-features = false, features = [
    "lazy",
    "csv",
    "parquet",
    "strings",
    "temporal",
] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "default-tls"] }
bzip2 = "0.5"
indicatif = "0.18"
rayon = "1.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
quick-xml = "0.38"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
polars-utils = { path = "vendor/polars-utils" }
